syntax = "proto3";

package rpc_service;

option go_package = ".;rpc_service";

// The greeting service definition.
service RpcService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}